--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
       with:
         ruby-version: 2.6.x
     - name: Install Awesome Bot
+    # https://github.com/dkhamsing/awesome_bot
       run: gem install awesome_bot
     - name: Run Awesome Bot
-      run: awesome_bot README.md
+      run: awesome_bot README.md --allow-redirect --white-list linkedin.com
